--- a/TestingSystem/WebContent/html/edit_user.jspf
+++ b/TestingSystem/WebContent/html/edit_user.jspf
@@ -73,39 +73,45 @@
 			<td>Accounts:</td>
 			<td>
 				<div class="CSSTableGenerator" >
-	   				<table>
-	   					<tr>
-	   						<td>No.</td>
-	   						<td>Account ID</td>
-	   						<td>Actions</td>
-	   					</tr>
-	   					<c:choose>
-   							<c:when test="<%=accountList.size() > 0 %>">
-			   					<c:set var="count" value="0"/>
-								<c:forEach items="<%=accountList %>" var="account">
-									<tr>
-										<c:set var="count" value="${count + 1}"/>
-										<td>${count}.</td>
-										<td>${account.accId}</td>
-										<td>
-											<a title="Change Password" href="javascript:openChangePasswordDialog('${account.accId}');" onclick=";"><img src="/TestingSystem/images/change-password-icon.png"/></a>
-											<a title="Delete" onclick=""><img src="/TestingSystem/images/delete_icon.png"/></a>
-										</td>
-									</tr>
-								</c:forEach>
-							</c:when>
-	   						<c:otherwise>
-	   							No accounts found!
-	   						</c:otherwise>
-	   					</c:choose>
-	   				</table>
+	   				
 	   			</div>
 			</td>
 		</tr>
 	</table>
 	<input type="submit" value="Edit">
 </form>
-
+<c:choose>
+	<c:when test="<%=accountList.size() > 0 %>">
+		<table id="hor-minimalist-b" summary="User Accounts">
+			<thead>
+		    	<tr>
+		    		<th scope="col">No.</th>
+		        	<th scope="col">Account ID</th>
+		            <th scope="col">Role</th>
+		            <th scope="col">Actions</th>
+		        </tr>
+		    </thead>
+			<c:set var="count" value="0"/>
+			<c:forEach items="<%=accountList %>" var="account">
+				<tr>
+					<c:set var="count" value="${count + 1}"/>
+					<td>${count}.</td>
+					<td>${account.accId}</td>
+					<td>
+						<c:forEach items="${account.accountRoleMapsForAccId}" var="aRM">
+							${aRM.role.roleName}<br/>
+						</c:forEach>
+					</td>
+					<td>
+						<a title="Change Password" href="javascript:openChangePasswordDialog('${account.accId}');" onclick=";"><img src="/TestingSystem/images/change-password-icon.png"/></a>
+						<a title="Edit Roles" href=""><img src="/TestingSystem/images/add_role_icon.png"/></a>
+						<a title="Delete" onclick=""><img src="/TestingSystem/images/delete_icon.png"/></a>
+					</td>
+				</tr>
+			</c:forEach>
+		</table>
+	</c:when>
+</c:choose>
 <div id="changePasswordDialog" title="Change password">
 	<input type="hidden" id="accountId">
 	<table>
