--- a/TestingSystem/WebContent/html/edit_user.jspf
+++ b/TestingSystem/WebContent/html/edit_user.jspf
@@ -15,6 +15,12 @@
 		address = StringPool.BLANK;
 	}
 	
+	String mobile = user.getMobile();
+	
+	if(mobile == null){
+		mobile = StringPool.BLANK;
+	}
+	
 	SimpleDateFormat formatter = new SimpleDateFormat("dd-MM-yyyy");
 	Date userBDate = user.getBdate();
 	String date = "";
@@ -66,7 +72,7 @@
 		</tr>
 		<tr>
 			<td>Mobile:</td>
-			<td><input type="text" value="<%=user.getMobile()%>" name="mobile"/></td>
+			<td><input type="text" value="<%=mobile%>" name="mobile"/></td>
 		</tr>
 		<tr>
 			<td>Birthday:</td>
@@ -80,8 +86,17 @@
 		</tr>
 		<tr>
 			<td>Accounts:</td>
-			<td>
-			</td>
+			<c:choose>
+				<c:when test="<%=accountList.size() == 0 %>">
+					<td>
+						<a href="javascript:;" id="addAccountButton">
+							Add account
+						</a>
+					</td>
+					<td>
+					</td>
+				</c:when>
+			</c:choose>
 		</tr>
 	</table>
 	
@@ -139,8 +154,10 @@
 			</table>
 		</c:when>
 	</c:choose>
-	<input type="submit" value="Edit">
+	<button type="submit" value="Edit" id="editUserButton" style="margin-top: 20px">Edit</button>
 </form>
+
+<div style="height: 40px"></div>
 
 <div id="changePasswordDialog" title="Change password">
 	<input type="hidden" id="accountId">
