--- a/TestingSystem/WebContent/html/edit_user.jspf
+++ b/TestingSystem/WebContent/html/edit_user.jspf
@@ -36,9 +36,7 @@
 
 <div style="font-size: 2.5em;">
 	<div style="display: inline; text-align: left">Edit User - <%=fullName%></div>
-	<div style="display: inline; text-align: right; text-decoration: underline; float: right">
-		<a href="${user_management_url}">&lt;&lt;&nbsp;Back</a>
-	</div>
+	<a href="${user_management_url}" id="backButton" class="rightButton">Back</a>
 	<hr>
 </div>
 
