--- a/TestingSystem/WebContent/css/index.css
+++ b/TestingSystem/WebContent/css/index.css
@@ -219,7 +219,7 @@ img
 #menu a {
 	display: block;
 	letter-spacing: 1px;
-	margin: 0px 10px;
+	//margin: 0px 10px;
 	padding: 10px 20px;
 	text-decoration: none;
 	text-align: center;
