--- a/TestingSystem/WebContent/html/edit_user.jspf
+++ b/TestingSystem/WebContent/html/edit_user.jspf
@@ -8,6 +8,11 @@
 	User user = userDao.findById(userId);
 	Set<Account> accountList = user.getAccounts();
 	
+	Account account = (Account) session.getAttribute("account");
+	
+	Role accountRole = ((AccountRoleMap) account.getAccountRoleMapsForAccId().toArray()[0]).getRole();
+	Integer roleId = accountRole.getRoleId();
+	
 	String fullName = user.getFname() + StringPool.SPACE + user.getLname();
 	String address = user.getAddress();
 	
@@ -35,10 +40,24 @@
 
 
 <div style="font-size: 2.5em;">
-	<div style="display: inline; text-align: left">Edit User - <%=fullName%></div>
-	<a href="${user_management_url}" id="backButton" class="rightButton" style="font-size: 0.5em">Back</a>
+	<c:choose>
+		<c:when test='<%=tsTab.equals("edit-user") %>'>
+			<div style="display: inline; text-align: left">Edit User - <%=fullName%></div>
+			<a href="${user_management_url}" id="backButton" class="rightButton" style="font-size: 0.5em">Back</a>
+		</c:when>
+		<c:when test='<%=tsTab.equals("user-profile") %>'>
+			<div style="display: inline; text-align: left">User Profile - <%=fullName%></div>
+			<a href="${home_url}" id="backButton" class="rightButton" style="font-size: 0.5em">Back</a>
+		</c:when>
+	</c:choose>	
+	
 	<hr>
 </div>
+
+<c:set var="isCurrentAccountAdmin" value="<%=roleId.equals(RoleConstants.ROLE_ADMIN) %>"></c:set>
+<c:set var="currentAccountId" value="<%=account.getAccId()%>"></c:set>
+
+<c:set var="adminRoleId" value="<%=RoleConstants.ROLE_ADMIN %>"/>
 
 <c:choose>
 	<c:when test="<%=!isUpdatedSuccessfully%>">
@@ -85,9 +104,11 @@
 		<tr>
 			<td>Accounts:</td>
 			<td>
-				<a href="javascript:openAddAccountDialog();" id="addAccountButton">
-					Add account
-				</a>
+				<c:if test="${isCurrentAccountAdmin}">
+					<a href="javascript:openAddAccountDialog();" id="addAccountButton">
+						Add account
+					</a>
+				</c:if>
 			</td>
 		</tr>
 		<tr>
@@ -111,36 +132,45 @@
 									<td>${count}.</td>
 									<td>${account.accId}</td>
 									<td>
-										<select id="changeRoleCombobox" name="changeRole${account.accId}" onchange="changeAccountRole('${account.accId}')">
-											<c:choose>
-												<c:when test="${account.accountRoleMapsForAccId != null && not empty account.accountRoleMapsForAccId}">
-													<c:forEach items="<%=roleList%>" var="role">
-														<c:choose>
-															<c:when test="${account.accountRoleMapsForAccId.toArray()[0].role eq role}">
-																<option selected="selected" value="${role.roleId}">${role.roleName}</option>
-															</c:when>
-															<c:otherwise>
+										<c:choose>
+											<c:when test='${isCurrentAccountAdmin && (account.accId ne currentAccountId) && account.accountRoleMapsForAccId.toArray()[0].role.roleId ne adminRoleId}'>
+												<select id="changeRoleCombobox" name="changeRole${account.accId}" onchange="changeAccountRole('${account.accId}')">
+													<c:choose>
+														<c:when test="${account.accountRoleMapsForAccId != null && not empty account.accountRoleMapsForAccId}">
+															<c:forEach items="<%=roleList%>" var="role">
+																<c:choose>
+																	<c:when test="${account.accountRoleMapsForAccId.toArray()[0].role eq role}">
+																		<option selected="selected" value="${role.roleId}">${role.roleName}</option>
+																	</c:when>
+																	<c:otherwise>
+																		<option value="${role.roleId}">${role.roleName}</option>
+																	</c:otherwise>
+																</c:choose>
+															</c:forEach>
+														</c:when>
+														<c:otherwise>
+															<option selected="selected" value="0">None</option>
+															<c:forEach items="<%=roleList%>" var="role">
 																<option value="${role.roleId}">${role.roleName}</option>
-															</c:otherwise>
-														</c:choose>
-													</c:forEach>
-												</c:when>
-												<c:otherwise>
-													<option selected="selected" value="0">None</option>
-													<c:forEach items="<%=roleList%>" var="role">
-														<option value="${role.roleId}">${role.roleName}</option>
-													</c:forEach>
-												</c:otherwise>
-											</c:choose>
-										</select>
-										
-										<%-- <c:forEach items="${account.accountRoleMapsForAccId}" var="aRM">
-											${aRM.role.roleName}<br/>
-										</c:forEach>--%>
+															</c:forEach>
+														</c:otherwise>
+													</c:choose>
+												</select>
+											</c:when>
+											<c:otherwise>
+												<c:forEach items="${account.accountRoleMapsForAccId}" var="aRM">
+													${aRM.role.roleName}<br/>
+												</c:forEach>
+											</c:otherwise>
+										</c:choose>
 									</td>
 									<td>
-										<a title="Change Password" href="javascript:openChangePasswordDialog('${account.accId}');"><img src="/TestingSystem/images/change-password-icon.png"/></a>
-										<a title="Delete" onclick="deleteAccount('${account.accId}')" href="javascript:;"><img src="/TestingSystem/images/delete_icon.png"/></a>
+										<c:if test="${account.accountRoleMapsForAccId.toArray()[0].role.roleId ne adminRoleId}">
+											<a title="Change Password" href="javascript:openChangePasswordDialog('${account.accId}');"><img src="/TestingSystem/images/change-password-icon.png"/></a>
+										</c:if>
+										<c:if test="${isCurrentAccountAdmin && (account.accId ne currentAccountId) && account.accountRoleMapsForAccId.toArray()[0].role.roleId ne adminRoleId}">
+											<a title="Delete" onclick="deleteAccount('${account.accId}')" href="javascript:;"><img src="/TestingSystem/images/delete_icon.png"/></a>
+										</c:if>
 									</td>
 								</tr>
 							</c:forEach>
