--- a/TestingSystem/WebContent/html/lecturer/home.jspf
+++ b/TestingSystem/WebContent/html/lecturer/home.jspf
@@ -12,15 +12,15 @@
 		<div style="clear: both;">&nbsp;</div>
 		<div class="entry">
 			<p><a href="#"><img src="images/Customers.png" width="500" height="150" alt="" /></a></p>
-			<p>This tab allows you to manage accounts in this system.</p>
+			<p>This tab allows you to manage student accounts in this system. You can add student accounts to your management.</p>
 		</div>
 	</div>
 	<div class="post">
-		<h2 class="title"><a href="#">User Management</a></h2>
+		<h2 class="title"><a href="#">Test Management</a></h2>
 		<div style="clear: both;">&nbsp;</div>
 		<div class="entry">
-			<p><a href="#"><img src="images/multy-user.png" width="500" height="150" alt="" /></a></p>
-			<p>This tab allows you to manage users in this system.</p>
+			<p><a href="#"><img src="images/test.jpg" width="500" height="150" alt="" /></a></p>
+			<p>This tab allows you to manage tests in this system.</p>
 		</div>
 	</div>
 	<div style="clear: both;">&nbsp;</div>
@@ -28,17 +28,17 @@
 <!-- end #content -->
 <div id="sidebar">
 	<div class="post">
-		<h2 class="title"><a href="#">Role Management</a></h2>
+		<h2 class="title"><a href="#">Result Management</a></h2>
 		<div style="clear: both;">&nbsp;</div>
 		<div class="entry">
-			<p>This tab allows you to manage roles in this system!</p>
+			<p>This tab allows you to manage results of tests in this system!</p>
 		</div>
 	</div>
 	<div class="post">
-		<h2 class="title"><a href="#">Log Management</a></h2>
+		<h2 class="title"><a href="#">User Profile Management</a></h2>
 		<div style="clear: both;">&nbsp;</div>
 		<div class="entry">
-			<p>This tab allows you to manage logs in this system!</p>
+			<p>This tab allows you to manage your own accounts & your user profile!</p>
 		</div>
 	</div>
 </div>
@@ -46,10 +46,10 @@
 
 <div id="sidebar2">
 	<div class="post">
-		<h2 class="title"><a href="#">Contact Us</a></h2>
+		<h2 class="title"><a href="#">Contact Admin</a></h2>
 		<div style="clear: both;">&nbsp;</div>
 		<div class="entry">
-			<p>If you have any queries, please contact us for more supports!</p>
+			<p>If you have any queries, please contact your administrator for more supports!</p>
 		</div>
 	</div>
 </div>
