--- a/TestingSystem/WebContent/html/student/home.jspf
+++ b/TestingSystem/WebContent/html/student/home.jspf
@@ -8,19 +8,19 @@
 		</div>
 	</div>
 	<div class="post">
-		<h2 class="title"><a href="#">Account Management</a></h2>
+		<h2 class="title"><a href="#">Result Management</a></h2>
 		<div style="clear: both;">&nbsp;</div>
 		<div class="entry">
-			<p><a href="#"><img src="images/Customers.png" width="500" height="150" alt="" /></a></p>
-			<p>This tab allows you to manage accounts in this system.</p>
+			<p><a href="#"><img src="images/result.jpg" width="500" height="150" alt="" /></a></p>
+			<p>This tab allows you to manage your results of tests.</p>
 		</div>
 	</div>
 	<div class="post">
-		<h2 class="title"><a href="#">User Management</a></h2>
+		<h2 class="title"><a href="#">Take Test</a></h2>
 		<div style="clear: both;">&nbsp;</div>
 		<div class="entry">
-			<p><a href="#"><img src="images/multy-user.png" width="500" height="150" alt="" /></a></p>
-			<p>This tab allows you to manage users in this system.</p>
+			<p><a href="#"><img src="images/take_test.jpg" width="500" height="150" alt="" /></a></p>
+			<p>This tab allows you to take tests in this system.</p>
 		</div>
 	</div>
 	<div style="clear: both;">&nbsp;</div>
@@ -28,17 +28,17 @@
 <!-- end #content -->
 <div id="sidebar">
 	<div class="post">
-		<h2 class="title"><a href="#">Role Management</a></h2>
+		<h2 class="title"><a href="#">User Profile</a></h2>
 		<div style="clear: both;">&nbsp;</div>
 		<div class="entry">
-			<p>This tab allows you to manage roles in this system!</p>
+			<p>This tab allows you to manage your own account information!</p>
 		</div>
 	</div>
 	<div class="post">
-		<h2 class="title"><a href="#">Log Management</a></h2>
+		<h2 class="title"><a href="#">Contact Your Lecturer</a></h2>
 		<div style="clear: both;">&nbsp;</div>
 		<div class="entry">
-			<p>This tab allows you to manage logs in this system!</p>
+			<p>If you have problems with your results or tests, please contact your lecturer!</p>
 		</div>
 	</div>
 </div>
@@ -46,10 +46,10 @@
 
 <div id="sidebar2">
 	<div class="post">
-		<h2 class="title"><a href="#">Contact Us</a></h2>
+		<h2 class="title"><a href="#">Contact Admin</a></h2>
 		<div style="clear: both;">&nbsp;</div>
 		<div class="entry">
-			<p>If you have any queries, please contact us for more supports!</p>
+			<p>If you have any queries belong to your account, please contact the administrator!</p>
 		</div>
 	</div>
 </div>
