--- a/TestingSystem/WebContent/html/account_management.jspf
+++ b/TestingSystem/WebContent/html/account_management.jspf
@@ -8,6 +8,9 @@
 	String accountId = (String) TSUtil.getAttribute(request, "accId", StringPool.BLANK);
 	
 	List<Account> accountList = accountDao.searchAccount(accountId, firstName, lastName, email);
+	
+	boolean isSearchSuccess = (Boolean) TSUtil.getAttribute(request, "isSearchSuccess", true);
+	boolean isClickedSearchButton = (Boolean) TSUtil.getAttribute(request, "isClickedSearchButton", false);
 %>
 
 <div style="font-size: 2.5em;">
@@ -15,6 +18,12 @@
 	<a href="${home_url}" id="backButton" class="rightButton" style="font-size: 0.5em">Back</a>
 	<hr>
 </div>
+
+<c:choose>
+	<c:when test="<%=isSearchSuccess && isClickedSearchButton%>">
+		<%@ include file="/html/message/successMessage.jspf"%>
+	</c:when>
+</c:choose>
 
 <form action="<%=TSConstants.TESTING_SYSTEM_SERVLET%>" method="POST" style="margin-bottom:15px">
 	<input type="hidden" name="<%=TSConstants.CMD%>" value="<%=TSConstants.SEARCH_ACCOUNT%>"/>
@@ -43,45 +52,47 @@
 
 <c:choose>
    	<c:when test="<%=accountList.size() > 0 %>">
-	    <table id="hor-minimalist-b" summary="Account Management"  style="margin-top: 20px">
-	    	<thead>
-		        <tr>
-		            <td>No.</td>
-		            <td>Account ID</td>
-		            <td>User Full Name</td>
-		            <td>Email</td>
-		            <td>Actions</td>
-		        </tr>
-	        </thead>
-	        <c:set var="count" value="0"/>
-			<c:forEach items="<%=accountList %>" var="account">
-				<tr>
-					<c:set var="count" value="${count + 1}"/>
-					<td>${count}.</td>
-					<td>${account.accId}</td>
-					<td>${account.user.fname}&nbsp;${account.user.lname}</td>
-					<td>${account.user.email}</td>
-					
-					<c:url value="<%=TSConstants.TESTING_SYSTEM_SERVLET_URL_PATTERN%>" var="editUserURL">
-						<c:param name="tsTab" value="edit-user"/>
-						<c:param name="userId" value="${account.user.userId}"/>
-					</c:url>
-					
-					<c:url value="<%=TSConstants.TESTING_SYSTEM_SERVLET_URL_PATTERN%>" var="viewUserURL">
-						<c:param name="tsTab" value="user-details"/>
-						<c:param name="userId" value="${account.user.userId}"/>
-					</c:url>
-					
-					<td>
-						<a title="View details" href="${viewUserURL}"><img src="/TestingSystem/images/view_icon.png"/></a>
-						<a title="Edit" href="${editUserURL}"><img src="/TestingSystem/images/edit_icon.png"/></a>
-						<a title="Delete" onclick="deleteAccount('${account.accId}')" href="javascript:;"><img src="/TestingSystem/images/delete_icon.png"/></a>
+   		<div class="CSSTableGenerator" style="margin-top: 20px">
+		    <table summary="Account Management">
+			        <tr>
+			            <td>No.</td>
+			            <td>Account ID</td>
+			            <td>First Name</td>
+			            <td>Last Name</td>
+			            <td>Email</td>
+			            <td>Actions</td>
+			        </tr>
+		        <c:set var="count" value="0"/>
+				<c:forEach items="<%=accountList %>" var="account">
+					<tr>
+						<c:set var="count" value="${count + 1}"/>
+						<td>${count}.</td>
+						<td>${account.accId}</td>
+						<td>${account.user.fname}</td>
+						<td>${account.user.lname}</td>
+						<td>${account.user.email}</td>
 						
-					</td>
-	
-				</tr>
-			</c:forEach>
-	    </table>
+						<c:url value="<%=TSConstants.TESTING_SYSTEM_SERVLET_URL_PATTERN%>" var="editUserURL">
+							<c:param name="tsTab" value="edit-user"/>
+							<c:param name="userId" value="${account.user.userId}"/>
+						</c:url>
+						
+						<c:url value="<%=TSConstants.TESTING_SYSTEM_SERVLET_URL_PATTERN%>" var="viewUserURL">
+							<c:param name="tsTab" value="user-details"/>
+							<c:param name="userId" value="${account.user.userId}"/>
+						</c:url>
+						
+						<td>
+							<a title="View details" href="${viewUserURL}"><img src="/TestingSystem/images/view_icon.png"/></a>
+							<a title="Edit" href="${editUserURL}"><img src="/TestingSystem/images/edit_icon.png"/></a>
+							<a title="Delete" onclick="deleteAccount('${account.accId}')" href="javascript:;"><img src="/TestingSystem/images/delete_icon.png"/></a>
+							
+						</td>
+		
+					</tr>
+				</c:forEach>
+		    </table>
+	    </div>
 	</c:when>
 	<c:otherwise>
 		<div style="color: red">No accounts found!</div>
