--- a/TestingSystem/WebContent/html/edit_user.jspf
+++ b/TestingSystem/WebContent/html/edit_user.jspf
@@ -175,6 +175,9 @@
 							</c:forEach>
 						</table>
 					</c:when>
+					<c:otherwise>
+						<div style="color: red">No accounts found!</div>
+					</c:otherwise>
 				</c:choose>
 			</td>
 		</tr>
