--- a/TestingSystem/WebContent/html/account_management.jspf
+++ b/TestingSystem/WebContent/html/account_management.jspf
@@ -1,3 +1,5 @@
+<%@page import="org.apache.log4j.MDC"%>
+<%@page import="model.*"%>
 <%
 	AccountDao accountDao = new AccountDaoImpl();
 	
@@ -11,6 +13,9 @@
 	
 	boolean isSearchSuccess = (Boolean) TSUtil.getAttribute(request, "isSearchSuccess", true);
 	boolean isClickedSearchButton = (Boolean) TSUtil.getAttribute(request, "isClickedSearchButton", false);
+	
+	Account account = (Account) session.getAttribute("account");
+	MDC.put("AccId",account.getAccId());
 %>
 
 <div style="font-size: 2.5em;">
