--- a/TestingSystem/WebContent/html/user_management.jspf
+++ b/TestingSystem/WebContent/html/user_management.jspf
@@ -1,3 +1,5 @@
+<%@page import="org.apache.log4j.MDC"%>
+<%@page import="model.*"%>
 <%
 	UserDao userDao = new UserDaoImpl();
 	
@@ -9,6 +11,9 @@
 	
 	boolean isSearchSuccess = (Boolean) TSUtil.getAttribute(request, "isSearchSuccess", true);
 	boolean isClickedSearchButton = (Boolean) TSUtil.getAttribute(request, "isClickedSearchButton", false);
+	
+	Account account = (Account) session.getAttribute("account");
+	MDC.put("AccId",account.getAccId());
 %>
 
 <div style="font-size: 2.5em;">
