--- a/TestingSystem/WebContent/html/edit_user.jspf
+++ b/TestingSystem/WebContent/html/edit_user.jspf
@@ -8,8 +8,8 @@
 	String userId = (String) request.getAttribute("userId");
 	User user = userDao.findById(userId);
 	
-	Account account = (Account) session.getAttribute("account");
-	MDC.put("AccId",account.getAccId());
+	Account accoun = (Account) session.getAttribute("account");
+	MDC.put("AccId",accoun.getAccId());
 	
 	Set<Account> accountList = null;
 	Account account = null;
