--- a/TestingSystem/WebContent/html/log_management.jspf
+++ b/TestingSystem/WebContent/html/log_management.jspf
@@ -1,10 +1,3 @@
-<%@page import="constants.RoleConstants"%>
-<%@page import="dao.impl.*"%>
-<%@page import="dao.*"%>
-<%@page import="constants.*"%>
-<%@page import="util.*"%>
-<%@page import="model.*"%>
-<%@page import="java.util.*"%>
 <%
 	LogDao logDao = new LogDaoImpl();
 	String accId = (String) TSUtil.getAttribute(request, "accId",
@@ -81,7 +74,7 @@
 
 	</c:when>
 	<c:otherwise>
-		<div style="color: red">No users found!</div>
+		<div style="color: red">No logs found!</div>
 	</c:otherwise>
 </c:choose>
 
